mobile whitespace fix

--- a/style.scss
+++ b/style.scss
@@ -421,4 +421,9 @@ h6 {
 	#menu {
 		height: 100px;
 	}
+
+	position: absolute;
+    left: 0;
+    overflow: hidden;
+    bottom: 0;
 }
